--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10667,3 +10667,14 @@ a.text-dark:focus {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+#footer {
+  margin-top: 30px;
+  padding: 20px;
+  color: #fff;
+  background: #333;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
