--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10672,7 +10672,7 @@ a.text-dark:focus {
   padding: 20px;
   color: #fff;
   background: #333;
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
